--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Loja</title>
-
+    Cabeçalho <br>
+    Curso HTML Progressivo - Como criar sites <br>
 
 </head>
 <body>
