--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Loja</title>
-    Cabeçalho <br>
-    Curso HTML Progressivo - Como criar sites <br>
+    <title>Loja Luan</title>
+    <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
-    
+    <header>Cabeçalho</header>
+
+    <footer>rodapé</footer>
+
 </body>
 </html>
