--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 
 </head>
 <body>
-    <header>Cabeçalho</header>
+    <header>Cabeçalho
+        <div class="b">
+            This is a box!
+          </div>
+
+    </header>
 
     <footer>rodapé</footer>
 
