--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
 
 </head>
 <body>
-    <header>Cabeçalho
-        <div class="b">
-            This is a box!
-          </div>
+    <header>
+        <div class="b"></div>
 
     </header>
 
