--- a/index.html
+++ b/index.html
@@ -8,8 +8,16 @@
 
 </head>
 <body>
-    <header>
-        <div class="b"></div>
+    <ion-header-bar class="bar-positive" style="background-color: blue;">
+        <table>
+            <tr>
+                <td><img src="luan_logo.png" class="b"> </td>
+                <td class="title">
+                    LN INFORMATICA
+                </td>
+            </tr> 
+        </table>
+	</ion-header-bar>
 
     </header>
 
