--- a/index.html
+++ b/index.html
@@ -8,21 +8,11 @@
 
 </head>
 <body>
-    <!-- 
-    <ion-header-bar class="bar-positive">
-        <table>
-            <tr>
-                <td><img src="luan_logo.png" class="b"> </td>
-                <td class="title">
-                    LN INFORMATICA
-                </td>
-            </tr> 
-        </table>
-	</ion-header-bar>
-    -->
 
     <ion-header-bar class="bar-positive">
-		<h1 class="content" style="text-align: center;"> <img src="luan_logo.png" align="left" class="b">Elastic header</h1>
+    <div class="content">
+		<h1><img src="luan_logo.png" align="left" class="b"><br>LN Informatica</h1>
+    </div>
 	</ion-header-bar>
 
 	<ion-content delegate-handle="example-scroller" elastic-header="example-elastic-header" overflow-scroll="false">
