--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
 		
 	<div class="content">
 	<div class="padding">
-
+        
+    <link rel="stylesheet" href="https://cdn.positus.global/production/resources/robbu/whatsapp-button/whatsapp-button.css">
+    <a id="robbu-whatsapp-button" class="right" target="_blank" href="https://api.whatsapp.com/send?phone=11999999999&text=Gostaria%20de%20saber%20os%20or%C3%A7amentos%20....">
+        <div class="rwb-tooltip">Fale conosco</div>
+        <img src="https://cdn.positus.global/production/resources/robbu/whatsapp-button/whatsapp-icon.svg">
+    </a>
+        
 </body>
 </html>
